--- a/python-school/data_files/2-csv-sol.ipynb
+++ b/python-school/data_files/2-csv-sol.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data formats 2 - CSV files"
+    "# CSV files"
    ]
   },
   {
@@ -756,7 +756,7 @@
     "\n",
     "**To avoid issues:**\n",
     "\n",
-    "* use explicit names both for output files (es: [example-1-enriched.csv](example-1-enriched.csv)) and handles (i.e. `csvfile_out`)\n",
+    "* use explicit names both for output files (es: [example-1-enriched.csv](data/example-1-enriched.csv)) and handles (i.e. `csvfile_out`)\n",
     "* backup data to read\n",
     "* always check before carelessly executing code you just wrote !"
    ]
@@ -1214,7 +1214,7 @@
     "\n",
     "### load_air_quality\n",
     "\n",
-    "Implement a function to load the dataset [air-quality.csv](air-quality.csv)\n",
+    "Implement a function to load the dataset [air-quality.csv](data/air-quality.csv)\n",
     "\n",
     "* **USE encoding** `latin-1`"
    ]
