--- a/python-school/data_files/3-json-sol.ipynb
+++ b/python-school/data_files/3-json-sol.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data formats 3 - JSON"
+    "# JSON files"
    ]
   },
   {
@@ -290,7 +290,7 @@
     "\n",
     "There is a particular JSON file type which is called [JSONL](http://jsonlines.org/) (note the _L_ at the end), which is a text file containing a sequence of lines, each representing a valid json object.\n",
     "\n",
-    "Let's have a look at the file [employees.jsonl](employees.jsonl):"
+    "Let's have a look at the file [employees.jsonl](data/employees.jsonl):"
    ]
   },
   {
