reset exec counts

--- a/python-school/data_files/1-lines-sol.ipynb
+++ b/python-school/data_files/1-lines-sol.ipynb
@@ -4,11 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data formats 1 - introduction\n",
+    "# Generic text files\n",
     "\n",
     "## Introduction\n",
     "\n",
-    "In these tutorials we will see how to load and write tabular data such as CSV, and we will mention tree-like data such as JSON files. We will also spend a couple of words about  opendata catalogs and licenses (creative commons)."
+    "In these tutorials we will see how to load and write tabular data such as CSV, and we will mention tree-like data such as JSON files."
    ]
   },
   {
