--- a/python-school/numpy/1-basics-sol.ipynb
+++ b/python-school/numpy/1-basics-sol.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "405e24a3",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "d82e7532",
    "metadata": {},
    "outputs": [
@@ -92,8 +92,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 18.2 ms, sys: 8.55 ms, total: 26.7 ms\n",
-      "Wall time: 26.3 ms\n"
+      "CPU times: user 158 ms, sys: 406 ms, total: 564 ms\n",
+      "Wall time: 59.6 ms\n"
      ]
     }
    ],
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "b2942a12",
    "metadata": {},
    "outputs": [
@@ -113,8 +113,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2.86 ms, sys: 2.28 ms, total: 5.14 ms\n",
-      "Wall time: 3.34 ms\n"
+      "CPU times: user 6.38 ms, sys: 520 μs, total: 6.9 ms\n",
+      "Wall time: 5.8 ms\n"
      ]
     }
    ],
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "840a6c9e",
    "metadata": {},
    "outputs": [
@@ -216,7 +216,7 @@
        "array([1, 2, 3, 4, 5, 6])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "b193ca77",
    "metadata": {},
    "outputs": [
@@ -249,7 +249,7 @@
        "1"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "d6df929d",
    "metadata": {},
    "outputs": [
@@ -283,7 +283,7 @@
        "array([10,  2,  3,  4,  5,  6])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "5f32f348",
    "metadata": {},
    "outputs": [
@@ -314,7 +314,7 @@
        "array([10,  2,  3])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "56f019d4",
    "metadata": {},
    "outputs": [
@@ -346,7 +346,7 @@
        "array([4, 5, 6])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "a15b9031",
    "metadata": {},
    "outputs": [
@@ -368,7 +368,7 @@
        "array([10,  2,  3, 40,  5,  6])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "02f13bd4",
    "metadata": {},
    "outputs": [
@@ -401,7 +401,7 @@
        "       [ 9, 10, 11, 12]])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "dd209e19",
    "metadata": {},
    "outputs": [
@@ -441,7 +441,7 @@
        "8"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "ba6ebd54",
    "metadata": {},
    "outputs": [
@@ -492,7 +492,7 @@
        "2"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "d0cd2279",
    "metadata": {},
    "outputs": [
@@ -522,7 +522,7 @@
        "(3, 4)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "2a9b050e",
    "metadata": {},
    "outputs": [
@@ -552,7 +552,7 @@
        "12"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "16d3efcc",
    "metadata": {},
    "outputs": [
@@ -584,7 +584,7 @@
        "dtype('int64')"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "4f69ffbe",
    "metadata": {},
    "outputs": [
@@ -622,7 +622,7 @@
        "array([0., 0.])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "85ec33dc",
    "metadata": {},
    "outputs": [
@@ -651,7 +651,7 @@
        "array([1., 1.])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "e15b1668",
    "metadata": {},
    "outputs": [
@@ -681,7 +681,7 @@
        "array([1, 1])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "37a99d8f",
    "metadata": {},
    "outputs": [
@@ -712,7 +712,7 @@
        "       [42, 42, 42]])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "ce233034",
    "metadata": {},
    "outputs": [
@@ -741,7 +741,7 @@
        "array([0, 1, 2, 3])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "b321b7a7",
    "metadata": {},
    "outputs": [
@@ -772,7 +772,7 @@
        "array([2, 4, 6, 8])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "9f0dfd5f",
    "metadata": {
     "tags": [
@@ -806,7 +806,7 @@
        "[2, 4, 6, 8]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -827,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "99111d29",
    "metadata": {},
    "outputs": [
@@ -837,7 +837,7 @@
        "array([ 0. ,  2.5,  5. ,  7.5, 10. ])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -876,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "026cc4d4",
    "metadata": {},
    "outputs": [
@@ -886,8 +886,9 @@
        "array([2, 3])"
       ]
      },
+     "execution_count": 24,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -914,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "051f4b88",
    "metadata": {},
    "outputs": [
@@ -924,8 +925,9 @@
        "(array([0, 1]), array([1, 4]), array([1., 1.]))"
       ]
      },
+     "execution_count": 25,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1734,7 +1736,7 @@
    "id": "52810fe9",
    "metadata": {},
    "source": [
-    "You may also provide arrays of indices to select from:"
+    "You may also provide arrays of indices to select:"
    ]
   },
   {
@@ -1757,6 +1759,14 @@
    ],
    "source": [
     "data[np.array([1, 2])]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a22696f5",
+   "metadata": {},
+   "source": [
+    "Which, as expected, returns the second and third rows."
    ]
   },
   {
@@ -2874,7 +2884,7 @@
    "id": "43712b1d",
    "metadata": {},
    "source": [
-    "And a fucntion with some undefined domain, like `log`.\n",
+    "And a function with some undefined domain, like `log`.\n",
     "\n",
     "Either you filter the array passed to `np.log()`, ensuring that whatever you pass it is within the range of values for which the function is properly defined:"
    ]
@@ -3044,6 +3054,16 @@
    "source": [
     "The ``savetxt()`` and ``loadtxt()`` functions accept additional optional\n",
     "parameters such as header, footer, and delimiter."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9b07f63c",
+   "metadata": {},
+   "source": [
+    "------------------------------------------------------------------------\n",
+    "\n",
+    "*Image credits: Jay Alammar https://jalammar.github.io/*"
    ]
   }
  ],
