fix refs to docs

--- a/python-school/visualization/1-basics-sol.ipynb
+++ b/python-school/visualization/1-basics-sol.ipynb
@@ -197,7 +197,7 @@
         "## Types of inputs to plotting functions\n",
         "\n",
         "Plotting functions expect an `np.array` as\n",
-        "input, or objects that can be converted to an array (via `np.asarray()`), such as lists.\n",
+        "input, or objects that can be converted to an array (via `np.asarray()`), like lists, for instance.\n",
         "\n",
         "So for instance, to draw the function `x**2` over the interval `[0, 2]`, you can simply write:"
       ]
@@ -301,7 +301,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "To quickly plot a distribution, you can use `Axes.hist()`, it will bin your data and the height of each bin, giving you some control over the binning with parameters such as `bin`, for you to pass the number of bins, and `density`, to normalise the frequencies:"
+        "To quickly plot a distribution, you can use `Axes.hist()`, it will bin your data and compute the height of each bin, giving you some control over the binning with parameters such as `bin`, for you to pass the number of bins, and `density`, to normalise the frequencies:"
       ]
     },
     {
@@ -445,8 +445,7 @@
       "metadata": {},
       "source": [
         "Legends in Matplotlib are quite flexible in layout, placement, and what\n",
-        "Artists they can represent. They are discussed in detail in\n",
-        "`legend_guide`."
+        "Artists they can represent. They are discussed in detail in the [legend guide](https://matplotlib.org/stable/users/explain/axes/legend_guide.html)"
       ]
     },
     {
@@ -504,7 +503,7 @@
       "source": [
         "In this basic example, both *xy* and *xytext* are in data coordinates.\n",
         "There are a variety of other coordinate systems one can choose -- see\n",
-        "[annotations-tutorial](https://matplotlib.org/stable/users/explain/text/annotations.html)."
+        "[the annotations tutorial](https://matplotlib.org/stable/users/explain/text/annotations.html)."
       ]
     },
     {
@@ -623,7 +622,7 @@
       "source": [
         "```{admonition} Answer\n",
         ":class: tip dropdown\n",
-        "You may use either `line.set?` or help(line.set). Try it!\n",
+        "You may use either `line.set?` or `help(line.set)`. Try it!\n",
         "```"
       ]
     },
@@ -749,12 +748,12 @@
         }
       ],
       "source": [
-        "# Create a figure 10cm wide and 8cm high.\n",
         "x = np.random.randn(20)\n",
         "data1 = np.random.randn(20)\n",
         "data2 = np.random.randn(20)\n",
         "line_coords = [np.min(x), np.max(x)]\n",
         "\n",
+        "# Create a figure 10cm wide and 8cm high.\n",
         "fig, ax = plt.subplots(figsize=(10 / 2.54, 8 / 2.54))\n",
         "ax.plot(x, data1, 'o', color='navy', markersize=4, label='data1')\n",
         "ax.scatter(x + 0.03, data2, color='sandybrown',  marker='v', s=4**2., label='data2')\n",
@@ -775,7 +774,7 @@
       "source": [
         "All of the `Axes.text()` functions return a `matplotlib.text.Text`\n",
         "instance.  Just as with lines above, you can customize the properties by\n",
-        "passing keyword arguments into the text functions::"
+        "passing keyword arguments into the text functions:"
       ]
     },
     {
