--- a/python-school/dataframes/1-basics-sol.ipynb
+++ b/python-school/dataframes/1-basics-sol.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "cb38eed2",
    "metadata": {},
    "outputs": [],
@@ -43,11 +43,11 @@
    "id": "27fe412c",
    "metadata": {},
    "source": [
-    "A dataframe is basically a table, that is a collection of columns, also called `Series`, which all contain the same number of cells -- meaning they're all of the same height. Generally, each row can be thought of as corresponding to one unit of study (one measurement, one individual, one geographical area, you name it), while columnn correspond to a specific attribute, or variable (name, size, age, description, creation date...). \n",
+    "A dataframe is basically a table, that is a collection of columns, also called `Series`, which all contain the same number of cells -- meaning they're all of the same height. Generally, each row can be thought of as corresponding to one unit of study (one measurement, one individual, one geographical area, you name it), while each columnn corresponds to a specific attribute, or variable (name, size, age, description, creation date...). \n",
     "\n",
     "![](img/dataframe.png)\n",
     "\n",
-    "In Polars, each column has a specific type (integer, string, date, but also list or dictionary!), similarly to NumPy arrays. And similarly to NumPy arrays, they can take \"null\" values in certain rows, to represent an absence of data."
+    "In Polars, each column has a specific type (integer, string, date, but also list or dictionary!), similarly to NumPy arrays. And, [similarly to NumPy arrays](numpy_nan), they can take \"null\" values in certain rows, to represent an absence of data."
    ]
   },
   {
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "25568534",
    "metadata": {},
    "outputs": [
@@ -400,7 +400,7 @@
        "└───────────┴─────────┴───────┴──────┴───┴──────────────┴──────────────┴─────────────┴─────────────┘"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "6e82ead0",
    "metadata": {},
    "outputs": [
@@ -462,7 +462,7 @@
        " 'sources']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "4d7b09d5",
    "metadata": {},
    "outputs": [
@@ -491,7 +491,7 @@
        "(17145, 30)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "39cbd29e",
    "metadata": {},
    "outputs": [
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "1b753800",
    "metadata": {},
    "outputs": [
@@ -607,7 +607,7 @@
        "└───────────┴─────────┴──────┘"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "da3d2ab6",
    "metadata": {},
    "outputs": [
@@ -679,7 +679,7 @@
        "└───────────┴─────────┴──────┘"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -700,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "c7774781",
    "metadata": {},
    "outputs": [
@@ -729,7 +729,7 @@
        "└───────────────────┘"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "a782b744",
    "metadata": {},
    "outputs": [
@@ -801,7 +801,7 @@
        "└──────────────────────────────┘"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -836,7 +836,7 @@
    "id": "f4751ef7",
    "metadata": {},
    "source": [
-    "The `pl.col()` function of Polars is absolutely central: it creates an [`Expression`](https://docs.pola.rs/api/python/stable/reference/expressions/index.html), allowing you to call one of its many methods to perform computations on the selected column."
+    "So, to wrap this up, the `pl.col()` function of Polars is absolutely central: it creates an [`Expression`](https://docs.pola.rs/api/python/stable/reference/expressions/index.html), allowing you to call one of its many methods to perform computations on the selected column."
    ]
   },
   {
@@ -855,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 14,
    "id": "c424191a",
    "metadata": {},
    "outputs": [
@@ -901,7 +901,7 @@
        "└───────────┴─────────┴───────┴──────┴───┴──────────────┴──────────────┴─────────────┴─────────────┘"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -933,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 15,
    "id": "372ee15f",
    "metadata": {},
    "outputs": [
@@ -979,7 +979,7 @@
        "└───────────┴─────────┴───────┴──────┴───┴──────────────┴──────────────┴─────────────┴─────────────┘"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -993,12 +993,12 @@
    "id": "36e32f10",
    "metadata": {},
    "source": [
-    "It does seem that the start and end day of each protest are each encoded in 3 columns of integers, respectively: `[\"startyear\", \"startmonth\", \"startday\"]`, and `[\"endyear\", \"endmonth\", \"endday\"]`. This makes it very annoying to compute the duration of protests, because for instance if a protest spans more than a month, we can't just subtract `\"endday\"` with `\"startday\"`, which are day numbers within their month. So let's first compute two new columns for the start and end date, with an actual `date` data type, which will save us a headache. Here we'll use the `pl.date()` function:"
+    "It does seem that the start and end day of each protest are each encoded in 3 columns of integers, respectively: `[\"startyear\", \"startmonth\", \"startday\"]`, and `[\"endyear\", \"endmonth\", \"endday\"]`. This makes it very annoying to compute the duration of protests, because, for instance, if a protest spans more than a month, we can't just subtract `\"endday\"` with `\"startday\"`, which are day numbers within their month. So let's first compute two new columns for the start and end date, with an actual `date` data type, which will save us a headache. Here we'll use the `pl.date()` function:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 16,
    "id": "fb835762",
    "metadata": {},
    "outputs": [
@@ -1040,7 +1040,7 @@
        "└───────────┴─────────┴───────┴──────┴───┴───────────────┴───────────────┴────────────┴────────────┘"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1063,7 +1063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 17,
    "id": "136d41ca",
    "metadata": {},
    "outputs": [
@@ -1104,7 +1104,7 @@
        "└───────────┴─────────┴───────┴──────┴───┴────────────────┴────────────┴────────────┴──────────────┘"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1140,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 18,
    "id": "6e4d82bc",
    "metadata": {
     "tags": [
@@ -1177,7 +1177,7 @@
        "└───────────┴─────────┴───────┴──────┴───┴────────────┴──────────────┴──────────────────┴──────────┘"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1229,7 +1229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 19,
    "id": "c348a746",
    "metadata": {
     "scrolled": false
@@ -1263,7 +1263,7 @@
        "└───────────┴─────────┴───────┴──────┴───┴────────────────┴────────────┴────────────┴──────────────┘"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1274,7 +1274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 20,
    "id": "1fde7d07",
    "metadata": {},
    "outputs": [
@@ -1306,7 +1306,7 @@
        "└────────────┴───────────┴───────┴──────┴───┴─────────┴────────────┴──────────┴──────────────┘"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1330,14 +1330,14 @@
    "id": "fd244a1e",
    "metadata": {},
    "source": [
-    "It's also possible to select contiguous rows by using _slicing_, as we already did for [strings](https://en.softpython.org/strings/strings2-sol.html#Slices) and [lists](https://en.softpython.org/lists/lists2-sol.html#Slices) TODO\n",
+    "It's also possible to select contiguous rows by using _slicing_, as we already did for [strings](https://en.softpython.org/strings/strings2-sol.html#Slices), [lists](https://en.softpython.org/lists/lists2-sol.html#Slices) and [arrays](array_select).\n",
     "\n",
     "For example, here we select two rows starting from the fifth (_included_):"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 21,
    "id": "ea89e51e",
    "metadata": {
     "scrolled": true
@@ -1371,7 +1371,7 @@
        "└───────────┴─────────┴───────┴──────┴───┴────────────────┴────────────┴────────────┴──────────────┘"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1405,7 +1405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 22,
    "id": "d62e3253",
    "metadata": {},
    "outputs": [
@@ -1446,7 +1446,7 @@
        "└────────────┴─────────┴───────┴──────┴───┴───────────────┴────────────┴────────────┴──────────────┘"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1467,7 +1467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 23,
    "id": "38ba0787",
    "metadata": {},
    "outputs": [
@@ -1513,7 +1513,7 @@
        "└────────────┴───────────┴───────┴──────┴───┴──────────────┴────────────┴────────────┴─────────────┘"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1532,7 +1532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 24,
    "id": "2c1f87a9",
    "metadata": {},
    "outputs": [
@@ -1577,7 +1577,7 @@
        "└────────────┴─────────┴───────┴──────┴───┴───────────────┴────────────┴────────────┴──────────────┘"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1601,7 +1601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 25,
    "id": "26ee6091",
    "metadata": {
     "scrolled": false
@@ -1634,7 +1634,7 @@
        "└───────────┴─────────┴───────┴──────┴───┴─────────┴────────────┴──────────┴──────────────┘"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1653,7 +1653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 26,
    "id": "0108206c",
    "metadata": {},
    "outputs": [
@@ -1695,7 +1695,7 @@
        "└────────────┴─────────┴───────┴──────┴───┴───────────────┴────────────┴────────────┴──────────────┘"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1716,7 +1716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 27,
    "id": "5ddcfb06",
    "metadata": {
     "tags": [
@@ -1762,7 +1762,7 @@
        "└────────────┴─────────┴───────┴──────┴───┴───────────────┴────────────┴────────────┴──────────────┘"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1798,7 +1798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 28,
    "id": "c2f2d672",
    "metadata": {
     "scrolled": false
@@ -1841,7 +1841,7 @@
        "└───────────┴─────────┴───────┴──────┴───┴────────────────┴────────────┴────────────┴──────────────┘"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1862,7 +1862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 29,
    "id": "5d6c1233",
    "metadata": {},
    "outputs": [
@@ -1903,7 +1903,7 @@
        "└───────────┴─────────┴───────┴──────┴───┴────────────────┴────────────┴────────────┴──────────────┘"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1948,7 +1948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 30,
    "id": "be2687b8",
    "metadata": {
     "tags": [
@@ -1992,7 +1992,7 @@
        "└─────────┴────────┴────────┴──────────────┴───┴──────────────┴─────────────┴─────────────┴────────┘"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2017,7 +2017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 31,
    "id": "ec39a0dd",
    "metadata": {},
    "outputs": [],
@@ -2032,7 +2032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 32,
    "id": "2395c320",
    "metadata": {
     "tags": [
@@ -2069,7 +2069,7 @@
        "└─────────┴────────┴────────┴──────────────┴───┴──────────────┴─────────────┴─────────────┴────────┘"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2096,7 +2096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 33,
    "id": "5b7f5d5e",
    "metadata": {
     "tags": [
@@ -2112,7 +2112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 34,
    "id": "e8e9a1d7",
    "metadata": {},
    "outputs": [
@@ -2163,7 +2163,7 @@
        "└─────────┴────────┴────────┴───────────────┴───┴──────────┴───────────────┴──────────────┴────────┘"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
