--- a/python-school/numpy/1-basics-sol.ipynb
+++ b/python-school/numpy/1-basics-sol.ipynb
@@ -1508,6 +1508,7 @@
    "id": "f828a90e",
    "metadata": {},
    "source": [
+    "(array_select)=\n",
     "## Selecting part of an array "
    ]
   },
@@ -2600,6 +2601,7 @@
    "id": "70676d18",
    "metadata": {},
    "source": [
+    "(numpy_nan)=\n",
     "### NaNs"
    ]
   },
@@ -3153,7 +3155,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
