mention `?` magic in first course

--- a/python-school/data_files/1-lines-sol.ipynb
+++ b/python-school/data_files/1-lines-sol.ipynb
@@ -465,6 +465,15 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```{note}\n",
+    "You can obtain an output similar to `help(object)` with the shortcut `object?`, try it! This works for any function or class, so it's extremely useful! Use it whenever you forget the arguments of a function. This is what is called an [IPython magic command](https://ipython.readthedocs.io/en/stable/interactive/magics.html), recognisable by the starting `%`. You may use them in an IPython session or Jupyter cell, but not in the basic Python interpreter (when you call `python`)!\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
     "id": "I53T_-LV5bPx"
