add parquet tip

--- a/python-school/dataframes/1-basics-sol.ipynb
+++ b/python-school/dataframes/1-basics-sol.ipynb
@@ -338,6 +338,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "51889c0f",
+   "metadata": {},
+   "source": [
+    "```{tip}\n",
+    "In case of doubt, choose the `.parquet` format to save your dataframes. It strikes a very good balance between file size and reading / writing time.\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "53a5d9a9",
    "metadata": {},
    "source": [
