Move illustrations to end of section

--- a/python-school/dataframes/1-basics-sol.ipynb
+++ b/python-school/dataframes/1-basics-sol.ipynb
@@ -579,8 +579,6 @@
     "\n",
     "### Selecting columns\n",
     "\n",
-    "![](img/df_select.png)\n",
-    "\n",
     "If we want a subset of columns, we pass the name of each column to `.select()`:"
    ]
   },
@@ -638,12 +636,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2119d9c6",
+   "metadata": {},
+   "source": [
+    "![](img/df_select.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4e99652c",
    "metadata": {},
    "source": [
-    "### Selecting and modifying\n",
-    "\n",
-    "![](img/df_select_modify.png)"
+    "### Selecting and modifying"
    ]
   },
   {
@@ -846,7 +850,9 @@
    "id": "f4751ef7",
    "metadata": {},
    "source": [
-    "So, to wrap this up, the `pl.col()` function of Polars is absolutely central: it creates an [`Expression`](https://docs.pola.rs/api/python/stable/reference/expressions/index.html), allowing you to call one of its many methods to perform computations on the selected column."
+    "So, to wrap this up, the `pl.col()` function of Polars is absolutely central: it creates an [`Expression`](https://docs.pola.rs/api/python/stable/reference/expressions/index.html), allowing you to call one of its many methods to perform computations on the selected column.\n",
+    "\n",
+    "![](img/df_select_modify.png)"
    ]
   },
   {
@@ -855,8 +861,6 @@
    "metadata": {},
    "source": [
     "### Adding columns\n",
-    "\n",
-    "![](img/df_with_columns.png)\n",
     "\n",
     "To keep existing columns and add new ones, the `.with_columns()` method will come in handy. \n",
     "\n",
@@ -1138,6 +1142,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "37608c3a",
+   "metadata": {},
+   "source": [
+    "![](img/df_with_columns.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ce171c5c",
    "metadata": {},
    "source": [
@@ -1395,9 +1407,7 @@
    "id": "7116e678",
    "metadata": {},
    "source": [
-    "### Selecting rows fulfilling some conditions\n",
-    "\n",
-    "![](img/df_filter.png)"
+    "### Selecting rows fulfilling some conditions"
    ]
   },
   {
@@ -1597,6 +1607,14 @@
     "    (pl.col(\"country\") == \"Italy\")\n",
     "    & (pl.col(\"year\") == 1992)\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a9778a28",
+   "metadata": {},
+   "source": [
+    "![](img/df_filter.png)"
    ]
   },
   {
