--- a/python-school/data_files/1-lines-sol.ipynb
+++ b/python-school/data_files/1-lines-sol.ipynb
@@ -83,7 +83,7 @@
     "id": "C0eSCHzw5bPZ"
    },
    "source": [
-    "What happened? Let's examing first rows:\n",
+    "What happened? Let's examine the first rows:\n",
     "\n",
     "\n",
     "\n",
@@ -212,7 +212,7 @@
     "id": "0zsZD7-N5bPo"
    },
    "source": [
-    "**✪ 1.2 EXERCISE**: you might wondering what exactly is that `f`, and what exatly the method `readlines` should be doing. When you find yourself in these situations, you might help yourself with functions `type` and `help`. This time, directly copy paste the same code here, but insert inside `with` block the commands:\n",
+    "**✪ 1.2 EXERCISE**: you might wondering what exactly is that `f`, and what exactly the method `readlines` should be doing. When you find yourself in these situations, you might help yourself with functions `type` and `help`. This time, directly copy paste the same code here, but insert inside `with` block the commands:\n",
     "\n",
     "* `print(type(f))`\n",
     "* `help(f)`\n",
@@ -480,7 +480,7 @@
    },
    "source": [
     "\n",
-    "First we put the content of the first line into the variable `line`, now we might put it in a variable witha  more meaningful name, like `name`. Also, we can directly read the next row into the variable `surname` and then print the concatenation of both:\n"
+    "First we put the content of the first line into the variable `line`, now we might put it in a variable with a more meaningful name, like `name`. Also, we can directly read the next row into the variable `surname` and then print the concatenation of both:\n"
    ]
   },
   {
@@ -776,7 +776,7 @@
    },
    "source": [
     "\n",
-    "**Hint 1**: to obtain the string `'abcde'`, the substring  `'cde'`, which starts at index 2, you can ue the operator square brackets, using the index followed by colon `:`\n"
+    "**Hint 1**: to obtain the string `'abcde'`, the substring  `'cde'`, which starts at index 2, you can use the square brackets operator, using the index followed by colon `:`\n"
    ]
   },
   {
@@ -1157,7 +1157,7 @@
     "id": "7OBEbHya5bSd"
    },
    "source": [
-    "**HINT 3**: while there is only one sequence to substitute, `replace` is fine, but if we had a milion of horrible sequences like `&gt;`, `&#62;`, `&x3e;`, what should we do? As good data cleaners, we recognize these are [HTML escape sequences](https://corsidia.com/materia/web-design/caratterispecialihtml), so we could use  methods specific to sequences like [html.escape](https://docs.python.org/3/library/html.html#html.unescape). TRy it instead of `replace` and check if it works!\n",
+    "**HINT 3**: while there is only one sequence to substitute, `replace` is fine, but if we had a million of horrible sequences like `&gt;`, `&#62;`, `&x3e;`, what should we do? As good data cleaners, we recognize these are [HTML escape sequences](https://corsidia.com/materia/web-design/caratterispecialihtml), so we could use  methods specific to sequences like [html.escape](https://docs.python.org/3/library/html.html#html.unescape). TRy it instead of `replace` and check if it works!\n",
     "\n",
     "\n",
     "NOTE: Before using `html.unescape`, import the module `html` with the command: \n",
