--- a/python-school/data_files/2-csv-sol.ipynb
+++ b/python-school/data_files/2-csv-sol.ipynb
@@ -22,7 +22,7 @@
     "- multiple tabs\n",
     "- macros\n",
     "\n",
-    "Correctly parsing complex files may become a nightmare. Instead, CSVs are far simpler, so much so you can even open them witha simple text editor.\n",
+    "Correctly parsing complex files may become a nightmare. Instead, CSVs are far simpler, so much so you can even open them with a simple text editor.\n",
     "\n",
     "We will try to open some CSV, taking into consideration the possible problems we might get. CSVs are not necessarily the perfect solution for everything, but they offer more control over reading and typically if there are conversion problems is because we made a mistake, and not because the reader module decided on its own to exchange days with months in dates.\n",
     "\n",
@@ -85,7 +85,7 @@
    "source": [
     "## Reading a CSV\n",
     "\n",
-    "We will start with artifical example CSV. Let's look at [example-1.csv](data/example-1.csv) which you can find in the same folder as this Jupyter notebook. It contains animals with their expected lifespan:\n",
+    "We will start with artificial example CSV. Let's look at [example-1.csv](data/example-1.csv) which you can find in the same folder as this Jupyter notebook. It contains animals with their expected lifespan:\n",
     "\n",
     "```\n",
     "animal, lifespan\n",
@@ -161,7 +161,7 @@
     "    my_reader = csv.reader(f, delimiter=\",\")\n",
     "\n",
     "    # 'my_reader' is an object considered 'iterable', that is,\n",
-    "    # if used in a 'for' will produce a sequnce of rows from csv\n",
+    "    # if used in a 'for' will produce a sequence of rows from csv\n",
     "    # NOTE: here every file row is converted into a list of Python strings !\n",
     "\n",
     "    for row in my_reader:\n",
@@ -174,7 +174,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We immediatly notice from output that example file is being printed, but there are square parrenthesis ( `[]` ). What do they mean? Those we printed are _lists of strings_\n",
+    "We immediately notice from output that example file is being printed, but there are square parrenthesis ( `[]` ). What do they mean? Those we printed are _lists of strings_\n",
     "\n",
     "Let's analyze what we did:\n",
     "\n",
@@ -253,7 +253,7 @@
     "    my_reader = csv.reader(f, delimiter=',') \n",
     "    \n",
     "    # 'my_reader' is an object considered 'iterable', that is, \n",
-    "    # if used in a 'for' will produce a sequnce of rows from csv\n",
+    "    # if used in a 'for' will produce a sequence of rows from csv\n",
     "    # NOTE: here every file row is converted into a list of Python strings !\n",
     "    \n",
     "    for row in my_reader:\n",
@@ -300,7 +300,7 @@
     "    my_reader = csv.reader(f, delimiter=',') \n",
     "    \n",
     "    # 'my_reader' is an object considered 'iterable', that is, \n",
-    "    # if used in a 'for' will produce a sequnce of rows from csv\n",
+    "    # if used in a 'for' will produce a sequence of rows from csv\n",
     "    # NOTE: here every file row is converted into a list of Python strings !\n",
     "    \n",
     "    big_list = []\n",
@@ -489,7 +489,7 @@
     " ['eagle', 25]]\n",
     "```\n",
     "\n",
-    "* If you can, try also to write the whole transformation to create `big_list` in one row, usinf the function [itertools.islice](https://docs.python.org/3/library/itertools.html#itertools.islice) to jump the header (for example `itertools.islice(['A', 'B', 'C', 'D', 'E'], 2, None)` first two elements and produces the sequence C D E F G - in our case the elements produced by `my_reader` would be rows)"
+    "* If you can, try also to write the whole transformation to create `big_list` in one row, using the function [itertools.islice](https://docs.python.org/3/library/itertools.html#itertools.islice) to jump the header (for example `itertools.islice(['A', 'B', 'C', 'D', 'E'], 2, None)` first two elements and produces the sequence C D E F G - in our case the elements produced by `my_reader` would be rows)"
    ]
   },
   {
@@ -828,7 +828,7 @@
     "\n",
     "Usually in open data catalogs like the popular CKAN platform (for example [dati.trentino.it](http://dati.trentino.it/), [data.gov.uk](https://data.gov.uk/), [European data portal](https://www.europeandataportal.eu/) run instances of CKAN) files are organized in _datasets_, which are collections of _resources_: each resource directly contains a file inside the catalog (typically CSV, JSON or XML) or a link to the real file located in a server belonging to the organizazion which created the data.\n",
     "\n",
-    "The first dataset we wil look at will be 'Botteghe storiche del Trentino':\n",
+    "The first dataset we will look at will be 'Botteghe storiche del Trentino':\n",
     "\n",
     "https://dati.trentino.it/dataset/botteghe-storiche-del-trentino\n",
     "\n",
