--- a/python-school/data_files/3-json-sol.ipynb
+++ b/python-school/data_files/3-json-sol.ipynb
@@ -279,7 +279,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note how the position is a list itself. In JSON we can have arbitrarily branched trees, without necessarily a regular structure (althouth when we're generating a json it certainly helps maintaining a regualar data scheme)."
+    "Note how the position is a list itself. In JSON we can have arbitrarily branched trees, without necessarily a regular structure (although when we're generating a json it certainly helps maintaining a regular data scheme)."
    ]
   },
   {
