--- a/python-school/dataframes/1-basics-sol.ipynb
+++ b/python-school/dataframes/1-basics-sol.ipynb
@@ -43,7 +43,7 @@
    "id": "27fe412c",
    "metadata": {},
    "source": [
-    "A dataframe is basically a table, that is a collection of columns, also called `Series`, which all contain the same number of cells -- meaning they're all of the same height. Generally, each row can be thought of as corresponding to one unit of study (one measurement, one individual, one geographical area, you name it), while each columnn corresponds to a specific attribute, or variable (name, size, age, description, creation date...). \n",
+    "A dataframe is basically a table, that is a collection of columns, also called `Series`, which all contain the same number of cells -- meaning they're all of the same height. Generally, each row can be thought of as corresponding to one unit of study (one measurement, one individual, one geographical area, you name it), while each column corresponds to a specific attribute, or variable (name, size, age, description, creation date...). \n",
     "\n",
     "![](img/dataframe.png)\n",
     "\n",
