--- a/python-school/functions/fun1-def-sol.ipynb
+++ b/python-school/functions/fun1-def-sol.ipynb
@@ -746,7 +746,7 @@
    "source": [
     "### Changing the world: fail / 2\n",
     "\n",
-    "Let's see another temptation. You might try to assign `external_string =` right inside the function. The follwing code again will **not** work"
+    "Let's see another temptation. You might try to assign `external_string =` right inside the function. The following code again will **not** work"
    ]
   },
   {
@@ -1283,7 +1283,7 @@
     "    for element in lst:\n",
     "        tmp.append(element * 2)   # WRONG: we are modifying a NEW list\n",
     "                                 \n",
-    "    return tmp                    # WRONG: text did'nt ask you to RETURN anything                                   \n",
+    "    return tmp                    # WRONG: text didn't ask you to RETURN anything                                   \n",
     "    \n",
     "external_numbers = double(external_numbers)  # WRONG: even if external_numbers association will \n",
     "                                             # actually  point  to a list of doubled numbers, \n",
@@ -1575,7 +1575,7 @@
    "id": "7e4aa901",
    "metadata": {},
    "source": [
-    "Songs are reported with the group, a dash `-` and finally the name. Strong with our new knowledge about functions, we decide to put in practice modern software development practices to analyze these misterious relics of the past."
+    "Songs are reported with the group, a dash `-` and finally the name. Strong with our new knowledge about functions, we decide to put in practice modern software development practices to analyze these mysterious relics of the past."
    ]
   },
   {
@@ -1800,7 +1800,7 @@
    "source": [
     "### Exercise - record\n",
     "\n",
-    "Write a function `record` which, given two lists `songsA` and `songsB`, MODIFIES `songsA` overwriting it with the content of `songsB`. If `songsB` has less elements than `songsS`, fill the remanining spaces with `None`\n",
+    "Write a function `record` which, given two lists `songsA` and `songsB`, MODIFIES `songsA` overwriting it with the content of `songsB`. If `songsB` has less elements than `songsS`, fill the remaining spaces with `None`\n",
     "\n",
     "- **ASSUME** `songsB` has at most the same number of songs of `songsA`\n",
     "- **DO NOT** reassign `album` (so no `album =`)"
@@ -2285,7 +2285,7 @@
    "id": "d2abad7b",
    "metadata": {},
    "source": [
-    "Clearly, this is not what we wanted. To get proper ordering, we need to tell Python that when it considers a tuple for comparison, it should extract the lifespan number. To do so, Python provides us with `key` parameter, to which we must pass a function that takes as argument the sequence element under consideration (in this case a tuple) and returns a trasformation of it which Python will use to perform the comparisons - in this case we want the life expectancy at the 1-th position in the tuple:"
+    "Clearly, this is not what we wanted. To get proper ordering, we need to tell Python that when it considers a tuple for comparison, it should extract the lifespan number. To do so, Python provides us with `key` parameter, to which we must pass a function that takes as argument the sequence element under consideration (in this case a tuple) and returns a transformation of it which Python will use to perform the comparisons - in this case we want the life expectancy at the 1-th position in the tuple:"
    ]
   },
   {
@@ -2401,7 +2401,7 @@
     "✪ Write a function `apply_borders` which takes a function `f` as parameter and a sequence, and RETURN a tuple holding two elements:\n",
     "\n",
     "- first element is obtained by applying `f` to the first element of the sequence\n",
-    "- second element is obtained by appling `f` to the last element of the sequence"
+    "- second element is obtained by applying `f` to the last element of the sequence"
    ]
   },
   {
