--- a/python-school/functions/fun2-errors-and-testing-sol.ipynb
+++ b/python-school/functions/fun2-errors-and-testing-sol.ipynb
@@ -197,7 +197,7 @@
     "    if sugar > 0.2:\n",
     "        print(\"take sugar\")\n",
     "    else:\n",
-    "        print(\"Don't have enouch sugar !\")\n",
+    "        print(\"Don't have enough sugar !\")\n",
     "        return False\n",
     "      \n",
     "    if flour > 1.0:\n",
@@ -249,7 +249,7 @@
     "[Real Python - Python Exceptions: an Introduction](https://realpython.com/python-exceptions/)\n",
     "\n",
     "\n",
-    "Using `return` we improved the previous function, but remains a problem: the responsability to understand whether or not the pie is properly made is given to the caller of the function, who has to take the returned value and decide upon that whether to party or not. A careless programmer might forget to do the check and party even with an ill-formed pie.\n",
+    "Using `return` we improved the previous function, but remains a problem: the responsibility to understand whether or not the pie is properly made is given to the caller of the function, who has to take the returned value and decide upon that whether to party or not. A careless programmer might forget to do the check and party even with an ill-formed pie.\n",
     "\n",
     "So we ask ourselves: is it possible to stop the execution not just of the function, but of the whole program when we find an unforeseen situation?"
    ]
@@ -273,7 +273,7 @@
     "raise Exception(\"Don't have enough flour !\")\n",
     "```\n",
     "\n",
-    "Note: in professional programs, the exception messages are intended for programmers, verbose, and tipically end up hidden in system logs. To final users you should only show short messages which are understanble by a non-technical public. At most, you can add an error code which the user might give to the technician for diagnosing the problem.\n",
+    "Note: in professional programs, the exception messages are intended for programmers, verbose, and typically end up hidden in system logs. To final users you should only show short messages which are understanble by a non-technical public. At most, you can add an error code which the user might give to the technician for diagnosing the problem.\n",
     "\n",
     "**EXERCISE**: Try to rewrite the function above by substituting the rows containing `return` with `raise Exception()`:"
    ]
@@ -572,7 +572,7 @@
     "\n",
     "# a lot of code\n",
     "\n",
-    "# after a lot of code we might not know if there are the proper conditions so that everything works allright\n",
+    "# after a lot of code we might not know if there are the proper conditions so that everything works alright\n",
     "\n",
     "print(\"turn on nuclear reactor\")"
    ]
@@ -719,7 +719,7 @@
     "# a lot of code\n",
     "\n",
     "# after a lot of code we might not know if there are the proper conditions so that\n",
-    "# everything works allright so before doing critical things, it is always a good idea\n",
+    "# everything works alright so before doing critical things, it is always a good idea\n",
     "# to perform a check ! if asserts fail (that is, the boolean expression is False),\n",
     "# the execution suddenly stops\n",
     "\n",
@@ -737,7 +737,7 @@
    "source": [
     "### When to use assert?\n",
     "\n",
-    "The case above is willingly exagerated, but shows how a check more sometimes prevents disasters.\n",
+    "The case above is willingly exaggerated, but shows how a check more sometimes prevents disasters.\n",
     "\n",
     "Asserts are a quick way to do checks, so much so that Python even allows to ignore them during execution to improve the performance (calling `python` with the `-O` parameter like in `python -O my_file.py`).\n",
     "\n",
@@ -844,7 +844,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the part about [Foundations - A.3 Basic Algorithms](https://en.softpython.org/index.html#basic-algorithms), we often use `assert` to perfom tests, that is, to verify a function behaves as expected.\n",
+    "In the part about [Foundations - A.3 Basic Algorithms](https://en.softpython.org/index.html#basic-algorithms), we often use `assert` to perform tests, that is, to verify a function behaves as expected.\n",
     "\n",
     "Look for example at this function:"
    ]
@@ -898,7 +898,7 @@
     "\n",
     "1. `my_sum(2,3)` will give `5`\n",
     "2. the boolean expression `my_sum(2,3) == 5` will give `True`\n",
-    "3. `assert True` will be exectued without producing any result, and the program execution will continue.\n",
+    "3. `assert True` will be executed without producing any result, and the program execution will continue.\n",
     "\n",
     "Otherwise, if `my_sum` is NOT correctly implemented like in this case:\n",
     "\n",
