--- a/python-school/functions/fun3-strings-sol.ipynb
+++ b/python-school/functions/fun3-strings-sol.ipynb
@@ -38,7 +38,7 @@
    },
    "outputs": [],
    "source": [
-    "# version with len, faster because python with a string always mantains in memory \n",
+    "# version with len, faster because python with a string always maintains in memory \n",
     "# the number of length immediately available\n",
     "def length1(s):\n",
     "    return len(s)"
