--- a/python-school/functions/fun4-lists-sol.ipynb
+++ b/python-school/functions/fun4-lists-sol.ipynb
@@ -397,7 +397,7 @@
     "\n",
     "Write a function `fake_news` which takes the databases and  RETURN a list holding strings with all possible combinations of subjects, antecedents and consequences where the topic of antecedent matches the one of consequence. See desired output for more info.\n",
     "\n",
-    "**NOTE**: Example data are givem but your code must work with _any_ database"
+    "**NOTE**: Example data are given but your code must work with _any_ database"
    ]
   },
   {
@@ -1118,7 +1118,7 @@
    "source": [
     "def firstlast(xs):\n",
     "    return xs[0] == xs[-1]\n",
-    "    # note: the comparation xs[0] == xs[-1] is an EXPRESSION which generates a boolean,\n",
+    "    # note: the comparison xs[0] == xs[-1] is an EXPRESSION which generates a boolean,\n",
     "    #       in this case True if the first character is equal to the last one and False\n",
     "    #       otherwise so we can directly return the result of the expression"
    ]
@@ -1525,7 +1525,7 @@
    "outputs": [],
    "source": [
     "try:\n",
-    "    peak([])         # with this anomalous list we expect the excpetion ValueError is raised\n",
+    "    peak([])         # with this anomalous list we expect the exception ValueError is raised\n",
     "    \n",
     "    raise Exception(\"Shouldn't arrive here!\") \n",
     "except ValueError:    # if exception is raised, it is behaving as expected and we do nothing\n",
@@ -1827,7 +1827,7 @@
    "source": [
     "### Exercise - threez\n",
     "\n",
-    "✪✪ MODIFY the given `lst` by placing the string `'z'` at the indeces divisible by 3."
+    "✪✪ MODIFY the given `lst` by placing the string `'z'` at the indices divisible by 3."
    ]
   },
   {
