--- a/python-school/mixed-structures/1-nested-structures-sol.ipynb
+++ b/python-school/mixed-structures/1-nested-structures-sol.ipynb
@@ -180,7 +180,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To access the second elemnt `'b'` of the first row `['a','b']` we would use instead index 1 :"
+    "To access the second element `'b'` of the first row `['a','b']` we would use instead index 1 :"
    ]
   },
   {
@@ -324,7 +324,7 @@
    "source": [
     "```{admonition} Answer\n",
     ":class: tip dropdown\n",
-    "The above style is ok. Since we don't explicitly need the position, if we want we can skip holding integer indeces `i` and `j` and directly obtain pointers to the internal lists, _provided we choose proper names for them_, like in this case with the `row` variable. Notice we named the internal variable `cell` to mean we are referring to the _string content_ of it.\n",
+    "The above style is ok. Since we don't explicitly need the position, if we want we can skip holding integer indices `i` and `j` and directly obtain pointers to the internal lists, _provided we choose proper names for them_, like in this case with the `row` variable. Notice we named the internal variable `cell` to mean we are referring to the _string content_ of it.\n",
     "```"
    ]
   },
@@ -1731,7 +1731,7 @@
    "source": [
     "### swap_cols\n",
     "\n",
-    "✪✪ Takes a matrix `mat` and two column indeces `j1` and `j2` and RETURN a NEW matrix where the columns `j1` and `j2` are swapped"
+    "✪✪ Takes a matrix `mat` and two column indices `j1` and `j2` and RETURN a NEW matrix where the columns `j1` and `j2` are swapped"
    ]
   },
   {
@@ -1797,7 +1797,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The definition is simple yet implementation might be tricky. If you're not careful, you could easily end up swapping the values twice and get the same original matrix. To prevent this, iterate only the upper triangular part of the matrix and remember `range` funciton can also have a start index:"
+    "The definition is simple yet implementation might be tricky. If you're not careful, you could easily end up swapping the values twice and get the same original matrix. To prevent this, iterate only the upper triangular part of the matrix and remember `range` function can also have a start index:"
    ]
   },
   {
