--- a/python-school/numpy/1-basics-sol.ipynb
+++ b/python-school/numpy/1-basics-sol.ipynb
@@ -2481,7 +2481,7 @@
    "id": "a263fcb0",
    "metadata": {},
    "source": [
-    "For instance, you can get the maxmimum over the axis of rows with:"
+    "For instance, you can get the maximum over the axis of rows with:"
    ]
   },
   {
