--- a/python-school/numpy/2-exercises-sol.ipynb
+++ b/python-school/numpy/2-exercises-sol.ipynb
@@ -490,7 +490,7 @@
     "Basic versions hints (slow):\n",
     "\n",
     "- Since you need to return a matrix, start with creating an empty one\n",
-    "- go through the whole input matrix with indeces `i` and `j`\n"
+    "- go through the whole input matrix with indices `i` and `j`\n"
    ]
   },
   {
@@ -902,7 +902,7 @@
    "source": [
     "## Exercise - avg_half\n",
     "\n",
-    "✪✪✪ Takes as input a Numpy matrix withan even number of columns, and RETURN as output a Numpy matrix 1x2, in which the first element will be the average of the left half of the matrix, and the second element will be the average of the right half.\n",
+    "✪✪✪ Takes as input a Numpy matrix with an even number of columns, and RETURN as output a Numpy matrix 1x2, in which the first element will be the average of the left half of the matrix, and the second element will be the average of the right half.\n",
     "\n",
     "Ingredients:\n",
     "\n",
@@ -1563,7 +1563,7 @@
    "source": [
     "## Exercise - stairsteps\n",
     "\n",
-    "✪✪✪ Given a numpy square matrix `mat` of dimension `n`, RETURN a NEW numpy array containing the values retrieved from the matrix in the followin order:\n",
+    "✪✪✪ Given a numpy square matrix `mat` of dimension `n`, RETURN a NEW numpy array containing the values retrieved from the matrix in the following order:\n",
     "\n",
     "```\n",
     "   1,2,*,*,*\n",
