--- a/python-school/visualization/1-basics-sol.ipynb
+++ b/python-school/visualization/1-basics-sol.ipynb
@@ -270,7 +270,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "You can make a bar plot using `Axes.bar()`, to show for instance the number of occurences of elements in an array. To get the latter, we use the `np.unique()` function, passing `return_counts=True` to get the frequency count of unique values in a NumPy array."
+        "You can make a bar plot using `Axes.bar()`, to show for instance the number of occurrences of elements in an array. To get the latter, we use the `np.unique()` function, passing `return_counts=True` to get the frequency count of unique values in a NumPy array."
       ]
     },
     {
@@ -633,7 +633,7 @@
         "### Colors\n",
         "\n",
         "Matplotlib has a very flexible array of colors that are accepted for most\n",
-        "Artists; see [allowable color definitions](https://matplotlib.org/stable/users/explain/colors/colors.html) for a list of specifications. You may also direclty set the opacity of Artists using the `alpha` argument.\n",
+        "Artists; see [allowable color definitions](https://matplotlib.org/stable/users/explain/colors/colors.html) for a list of specifications. You may also directly set the opacity of Artists using the `alpha` argument.\n",
         "\n",
         "Some Artists will take multiple colors.  For instance, for\n",
         "a `Axes.scatter()` plot, the edge of the markers can be different colors\n",
