Add join and agg diagrams

--- a/python-school/dataframes/2-advanced-sol.ipynb
+++ b/python-school/dataframes/2-advanced-sol.ipynb
@@ -167,7 +167,8 @@
     }
    ],
    "source": [
-    "plt.hist('participants', data=protests.filter(pl.col(\"participants\") < 1e4));"
+    "f = pl.col(\"participants\") < 1e4\n",
+    "plt.hist('participants', data=protests.filter(f));"
    ]
   },
   {
@@ -410,7 +411,7 @@
     }
    ],
    "source": [
-    "protests.filter(pl.col(\"participants\") < 1e4).plot.scatter(x='start_date', y='participants', by='protester_violence')"
+    "protests.filter(f).plot.scatter(x='start_date', y='participants', by='protester_violence')"
    ]
   },
   {
@@ -875,6 +876,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7f2b22ff",
+   "metadata": {},
+   "source": [
+    "![](img/df_agg.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d69d6892",
    "metadata": {},
    "source": [
@@ -1223,7 +1232,7 @@
    "id": "b92d0091",
    "metadata": {},
    "source": [
-    "As you can see, there is one row per country, and the population counts are given in separate columns, for years ranging between 1960 and 2022. So in principle, when adding in the population data to `protests`, we should add the population corresponding to the protest's year. For the sake of simplicity though, here we'll take populations from a single year. But let's at least choose it reasonably. We've already seen graphically the distribution of `start_date`, but let's get some summmary statistics.\n",
+    "As you can see, there is one row per country, and the population counts are given in separate columns, for years ranging between 1960 and 2022. So in principle, when adding in the population data to `protests`, we should add the population corresponding to the protest's year. For the sake of simplicity though, here we'll take populations from a single year. But let's at least choose it reasonably. We've already seen graphically the distribution of `start_date`, but let's get some summary statistics.\n",
     "\n",
     "As a small exercise, try to get the following table (hint: use the `Dataframe.describe()` method):"
    ]
@@ -1485,6 +1494,14 @@
     ":class: tip dropdown\n",
     "They have null values in `\"pop_2007\"`, to represent an absence of data. Try to get the rows for which this is the case.\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d9b8f2d1",
+   "metadata": {},
+   "source": [
+    "![](img/df_join.png)"
    ]
   },
   {
@@ -2333,7 +2350,7 @@
    "source": [
     "### Exercise - Air pollutants\n",
     "\n",
-    "Let's try analzying the hourly data from air quality monitoring stations from Autonomous Province of Trento.\n",
+    "Let's try to analyse the hourly data from air quality monitoring stations from Autonomous Province of Trento.\n",
     "\n",
     "Source: [dati.trentino.it](https://dati.trentino.it/dataset/qualita-dell-aria-rilevazioni-delle-stazioni-monitoraggio)"
    ]
